# WorkTreeDesk

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: review-provider-api.md
preview/: latest.json
scripts/: release.mjs  run-tauri-channel.mjs
src/: App.tsx  i18n.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  common.rs  git.rs  lib.rs  main.rs  models.rs  provider.rs  repository.rs  review.rs  system.rs  update.rs
src-tauri/src/models/: git.rs  mod.rs  provider.rs  requests.rs  review.rs  scan.rs  update.rs
src-tauri/src/repository/: mod.rs  scan.rs  worktree.rs
src-tauri/src/review/: commands.rs  gitee.rs  github.rs  gitlab.rs  mod.rs  shared.rs
src-tauri/src/review/api/: mod.rs
src-tauri/src/review/api/gitee/: client.rs  mod.rs  pull_requests.rs  repositories.rs
src-tauri/src/review/api/github/: client.rs  mod.rs  pull_requests.rs  repositories.rs
src-tauri/src/review/api/gitlab/: client.rs  mod.rs  pull_requests.rs  repositories.rs
stable/: latest.json
