[package]
name = "worktree-desk"
version = "0.1.8"
description = "A macOS desktop wrapper for Git worktree workflows."
authors = ["Codex"]
edition = "2021"

[lib]
name = "worktree_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
walkdir = "2"
